2003-05-12  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcestylescheme.h:
	s/GTK_STYLE_SOURCE_SCHEME/GTK_SOURCE_STYLE_SCHEME/ for
	GtkSourceStyleScheme macros (pointed by Ahmad Baitalmal
	<ahmad@bitbuilder.com>)

2003-05-08  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/gtksourcebuffer.c
	* gtksourceview/gtksourceview.c: fixed compilation problems 
	with gcc 2.9.x (patch by Mohammed Sameer <Uniball@gmx.net>)

=== gtksourceview 0.2.0 ===
	
2003-05-05  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* configure.in: Bumped version number to 0.2.0 due to the
	directory renaming.

	* NEWS: Updated for new release

2003-05-05  Paolo Maggi  <paolo.maggi@polito.it>

	"src" dir renamed to "gtksourceview", in this way headers 
	can be properly namespaced

=== gtksourceview 0.1.0 ===
	
2003-05-02  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	New GtkSourceView widget by Paolo Maggi and Gustavo Giráldez.

	* API has been completely revised
	* New language and manager objects to set regular expressions for
	  syntax highlighting from XML files
	* New improved highlighting engine
	* Rewritten test application which demonstrates most important features
	* Markers API have been redesigned
	* Text style schemes for highlighted elements
	* The view can draw a vertical line indicating a right margin
	* Smart HOME/END keys move to the first/last character in the line
	  before moving to the real begin/end (patch by Jeroen Zwartepoorte)
	* Auto indentation support
	
2003-04-15  Christian Neumair  <chris@gnome-de.org>

	* configure.in: Changed AC_PROG_LIBTOOL macro to AM_PROG_LIBTOOL.

2003-01-05  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/gtksourcebuffer.c: (check_syntax),
	(gtk_source_buffer_regex_search), (gtk_source_buffer_regex_match):
	Really fix the highlighting code this time. Uses
	g_utf8_offset_to_pointer and g_utf8_pointer_to_offset to convert
	between character offset and byte offset required for the regex methods.
	Patch by Gustavo.
